--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,52 +1,50 @@
 {
-	"name": "Ethay Extension",
-	"description": "Ethay Extension",
-	"version": "0.1.0",
-	"manifest_version": 3,
-	"content_security_policy": {
-		"extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
-	},
-	"action": {
-		"default_popup": "index.html",
-		"default_icon": {
-			"16": "/ethay.png",
-			"48": "/ethay.png",
-			"128": "/ethay.png"
-		}
-	},
-	"icons": {
-		"16": "/ethay.png",
-		"48": "/ethay.png",
-		"128": "/ethay.png"
-	},
-	"content_scripts": [
-		{
-			"matches": [
-				"<all_urls>",
-				"http://localhost:3000/*",
-				"https://localhost:3000/*"
-			],
-			"js": [
-				"content.js"
-			],
-			"run_at": "document_start"
-		}
-	],
-	"web_accessible_resources": [
-		{
-			"resources": [
-				"injected.js"
-			],
-			"matches": [
-				"<all_urls>"
-			]
-		}
-	],
-	"permissions": [
-		"activeTab",
-		"tabs",
-		"storage",
-		"scripting"
-	],
-	"host_permissions": ["<all_urls>"]
+  "name": "Ethay Extension",
+  "description": "Ethay Extension",
+  "version": "0.1.0",
+  "manifest_version": 3,
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  },
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "/ethay.png",
+      "48": "/ethay.png",
+      "128": "/ethay.png"
+    }
+  },
+  "icons": {
+    "16": "/ethay.png",
+    "48": "/ethay.png",
+    "128": "/ethay.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>",
+        "http://localhost:3000/*",
+        "https://localhost:3000/*",
+        "https://twitter.com/*",
+        "https://x.com/*"
+      ],
+      "js": ["content.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["injected.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "storage",
+    "scripting",
+    "https://twitter.com/*",
+    "https://x.com/*"
+  ],
+  "host_permissions": ["<all_urls>"]
 }
