--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.6",
     "typescript": "^4.9.4",
     "viem": "^2.21.45",
     "vite": "^5.3.5",
