--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,8 +28,7 @@
         "https://twitter.com/*",
         "https://x.com/*"
       ],
-      "js": ["content.js"],
-      "run_at": "document_start"
+      "js": ["content.js"]
     }
   ],
   "web_accessible_resources": [
